# pytest-mellea-semantic

./: .gitignore  CONTRIBUTING.md  README.md  mise.toml  pyproject.toml
.github/workflows/: ci.yml
docs/: calibration.md  design.md  usage.md
src/pytest_mellea/: __init__.py  _assertions.py  _constants.py  _embeddings.py  _exceptions.py  _plugin.py  _runtime.py
src/pytest_mellea_semantic/: __init__.py  _assertions.py  _constants.py  _embeddings.py  _plugin.py  _runtime.py
tests/e2e/: test_ollama_semantic.py
tests/integration/: test_plugin.py
tests/unit/: test_assertions.py  test_embeddings.py  test_package.py  test_runtime.py
